# enrico-v2

./: LICENSE  app.py  database.py  database2.py  pyproject.toml
templates/: applicationform.html  applicationsubmit.html  banner.html  footer.html  home.html  jobitem.html  jobpage.html  nav.html  nav2.html
